CMAKE_MINIMUM_REQUIRED(VERSION 3.7)
PROJECT(Registration)
SET(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS TRUE)
SET(BUILD_SHARED_LIBS TRUE)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
FIND_PACKAGE(VTK REQUIRED)
INCLUDE(${VTK_USE_FILE})
FIND_PACKAGE(ITK REQUIRED)
INCLUDE(${ITK_USE_FILE})
ADD_SUBDIRECTORY(App)
ADD_SUBDIRECTORY(Entry)
ADD_SUBDIRECTORY(Image)
ADD_SUBDIRECTORY(Path)
ADD_SUBDIRECTORY(Reader)
ADD_SUBDIRECTORY(CHECK)
ADD_SUBDIRECTORY(Visualizer)
ADD_SUBDIRECTORY(Writer)
ADD_SUBDIRECTORY(ToVTKImage)
ADD_SUBDIRECTORY(VTKImage)