CMAKE_MINIMUM_REQUIRED(VERSION 3.7)
PROJECT(Registration)
SET(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS TRUE)
SET(BUILD_SHARED_LIBS TRUE)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
FIND_PACKAGE(VTK REQUIRED vtkRenderingOpenGL vtkInteractionStyle)
INCLUDE(${VTK_USE_FILE})
FIND_PACKAGE(ITK REQUIRED)
INCLUDE(${ITK_USE_FILE})
FIND_PACKAGE(Qt5Widgets REQUIRED)
ADD_SUBDIRECTORY(App)
ADD_SUBDIRECTORY(CHECK)
ADD_SUBDIRECTORY(Entry)
ADD_SUBDIRECTORY(Image)
ADD_SUBDIRECTORY(Path)
ADD_SUBDIRECTORY(Reader)
ADD_SUBDIRECTORY(ToVTKImage)
ADD_SUBDIRECTORY(Visualizer)
ADD_SUBDIRECTORY(VTKImageWrapper)
ADD_SUBDIRECTORY(VTKRendererWrapper)
ADD_SUBDIRECTORY(VTKRenderWindowWrapper)
ADD_SUBDIRECTORY(VTKRenderWindowInteractorWrapper)
ADD_SUBDIRECTORY(VTKSmartVolumeMapperWrapper)
ADD_SUBDIRECTORY(VTKVolumeWrapper)
ADD_SUBDIRECTORY(VTKVolumePropertyWrapper)
ADD_SUBDIRECTORY(Writer)